feat: use ccc.nvim instead of nvim-colorizer.lua
reason: nvim-colorizer.lua uses deprecated method

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -341,10 +341,14 @@ repo = 'terryma/vim-multiple-cursors'
 on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 
 [[plugins]]
-repo = 'norcalli/nvim-colorizer.lua'
+repo = 'uga-rosa/ccc.nvim'
 on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 lua_source = '''
-    require('colorizer').setup()
+require('ccc').setup({
+    highlighter = {
+        auto_enable = true,
+    },
+})
 '''
 
 [[plugins]]
