--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -168,6 +168,7 @@ vim.api.nvim_command("source " .. gpNvimScriptFilePath)
 
 [[plugins]]
 repo = 'olimorris/codecompanion.nvim'
+on_source = ['mcphub.nvim']
 on_cmd = ['CodeCompanion', 'CodeCompanionChat', 'CodeCompanionActions', 'CodeCompanionCmd']
 lua_add = '''
 vim.cmd('cabbrev cci CodeCompanion')
@@ -208,7 +209,20 @@ require('codecompanion').setup({
         }})end,
     },
     strategies = {
-        chat = {adapter = "gemini",},
+        chat = {
+            adapter = "gemini",
+            tools = {
+                ["mcp"] = {
+                    callback = function ()
+                        return require("mcphub.extensions.codecompanion")
+                    end,
+                    description = "Call tools and resources from MCP Servers",
+                    opts = {
+                        requires_approval = true,
+                    },
+                },
+            },
+        },
         inline = {adapter = "gemini",},
         agent = {adapter = "gemini",},
     },
@@ -232,6 +246,7 @@ require('codecompanion').setup({
 repo = 'yetone/avante.nvim'
 hook_post_update = 'pwsh -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false'
 build = 'pwsh -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false'
+on_source = ['mcphub.nvim']
 on_cmd = ['AvanteAsk', 'AvanteChat', 'AvanteEdit', 'AvanteFocus', 'AvanteRefresh', 'AvanteShowRepoMap', 'AvanteToggle']
 lua_add = '''
 local opts = { noremap = true, silent = true }
@@ -280,13 +295,30 @@ require('avante').setup({
 
 [[plugins]]
 repo = 'stevearc/dressing.nvim'
-on_source = ['avante.nvim', 'codecompanion.nvim', 'gp.nvim']
+on_source = ['avante.nvim', 'codecompanion.nvim', 'gp.nvim', 'mcphub.nvim']
 
 [[plugins]]
 repo = 'nvim-lua/plenary.nvim'
-on_source = ['avante.nvim', 'codecompanion.nvim']
+on_source = ['avante.nvim', 'codecompanion.nvim', 'mcphub.nvim']
 
 [[plugins]]
 repo = 'MunifTanjim/nui.nvim'
 on_source = ['avante.nvim', 'codecompanion.nvim']
+
+[[plugins]]
+repo = 'ravitemer/mcphub.nvim'
+build = 'pnpm install -g mcp-hub@latest'
+on_cmd = ["MCPHub"]
+on_source = ['avante.nvim', 'codecompanion.nvim']
+lua_source = '''
+require("mcphub").setup({
+    extensions = {
+        codecompanion = {
+            show_result_in_chat = true,
+            make_vars = true,
+            make_slash_commands = true,
+        }
+    }
+})
+'''
 
