feat: update configs for codecompanion.nvim

--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -224,7 +224,7 @@ require('codecompanion').setup({
                     end,
                     description = "Call tools and resources from MCP Servers",
                     opts = {
-                        requires_approval = true,
+                        requires_approval = false,
                     },
                 },
             },
@@ -241,7 +241,7 @@ require('codecompanion').setup({
     },
     display = {
         chat = {
-            auto_scroll = false,
+            auto_scroll = true,
             show_header_separator = true,
         },
     },
@@ -324,7 +324,7 @@ lua_source = '''
 require("mcphub").setup({
     extensions = {
         codecompanion = {
-            show_result_in_chat = true,
+            show_result_in_chat = false,
             make_vars = true,
             make_slash_commands = true,
         }
