--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -299,7 +299,16 @@ require('avante').setup({
             endpoint = "http://localhost:11434/v1",
             model = "codegemma:2b",
         },
-    }
+    },
+    system_prompt = function ()
+        local hub = require("mcphub").get_hub_instance()
+        return hub:get_active_servers_prompt()
+    end,
+    custom_tools = function ()
+        return {
+            require("mcphub.extensions.avante").mcp_tool(),
+        }
+    end,
 })
 '''
 
@@ -327,7 +336,10 @@ require("mcphub").setup({
             show_result_in_chat = false,
             make_vars = true,
             make_slash_commands = true,
-        }
+        },
+        avante = {
+            auto_approve_mcp_tool_calls = false,
+        },
     }
 })
 '''
