--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -92,7 +92,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.5-pro-exp-03-25", top_k = 40},
+            model = {model = "gemini-2.5-pro-preview-05-06", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -100,23 +100,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.0-flash", top_k = 40},
-            system_prompt = general_system_prompt,
-        },
-        {
-            name = "Gemini-Flash-Lite",
-            provider = "googleai",
-            chat = true,
-            command = true,
-            model = {model = "gemini-2.0-flash-lite", top_k = 40},
-            system_prompt = general_system_prompt,
-        },
-        {
-            name = "Gemini-Thinking",
-            provider = "googleai",
-            chat = true,
-            command = true,
-            model = {model = "gemini-2.0-flash-thinking-exp-01-21", top_k = 64},
+            model = {model = "gemini-2.5-flash-preview-04-17", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -199,12 +183,11 @@ require('codecompanion').setup({
             return require('codecompanion.adapters').extend('gemini', {
                 schema = {
                     model = {
-                        default = "gemini-2.0-flash-thinking-exp-01-21",
+                        default = "gemini-2.5-flash-preview-04-17",
                         choices = {
-                            "gemini-2.0-flash",
-                            "gemini-2.0-flash-thinking-exp-01-21",
                             "gemini-2.5-flash-preview-04-17",
-                            "gemini-2.5-pro-exp-03-25",
+                            "gemini-2.5-pro-preview-05-06",
+                            "gemini-2.0-flash",
                         },
                     },
                 },
@@ -268,7 +251,7 @@ require('avante').setup({
     provider = "gemini",
     auto_suggestions_provider = "gemini",
     cursor_applying_provider = "gemini",
-    gemini = {model = "gemini-2.0-flash-thinking-exp-01-21"},
+    gemini = {model = "gemini-2.5-flash-preview-04-17"},
     behavior = {
         auto_suggestions = false,
         auto_set_highlight_group = true,
@@ -277,21 +260,17 @@ require('avante').setup({
         enable_cursor_planning_mode = true,
     },
     vendors = {
-        gemini_2_0_flash = {
-            __inherited_from = "gemini",
-            model = "gemini-2.0-flash",
-        },
         gemini_2_5_flash = {
             __inherited_from = "gemini",
             model = "gemini-2.5-flash-preview-04-17",
         },
         gemini_pro = {
             __inherited_from = "gemini",
-            model = "geminigemini-2.5-pro-exp-03-25",
+            model = "gemini-2.5-pro-preview-05-06",
         },
-        gemini_thinking = {
+        gemini_2_0_flash = {
             __inherited_from = "gemini",
-            model = "gemini-2.0-flash-thinking-exp-01-21",
+            model = "gemini-2.0-flash",
         },
         ollama = {
             __inherited_from = "openai",
