--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -92,7 +92,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.5-pro-preview-05-06", top_k = 40},
+            model = {model = "gemini-2.5-pro-exp-03-25", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -186,7 +186,7 @@ require('codecompanion').setup({
                         default = "gemini-2.5-flash-preview-04-17",
                         choices = {
                             "gemini-2.5-flash-preview-04-17",
-                            "gemini-2.5-pro-preview-05-06",
+                            "gemini-2.5-pro-exp-03-25",
                             "gemini-2.0-flash",
                         },
                     },
@@ -266,7 +266,7 @@ require('avante').setup({
         },
         gemini_pro = {
             __inherited_from = "gemini",
-            model = "gemini-2.5-pro-preview-05-06",
+            model = "gemini-2.5-pro-exp-03-25",
         },
         gemini_2_0_flash = {
             __inherited_from = "gemini",
