--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -198,20 +198,7 @@ require('codecompanion').setup({
             })end,
     },
     strategies = {
-        chat = {
-            adapter = "gemini",
-            tools = {
-                ["mcp"] = {
-                    callback = function ()
-                        return require("mcphub.extensions.codecompanion")
-                    end,
-                    description = "Call tools and resources from MCP Servers",
-                    opts = {
-                        requires_approval = false,
-                    },
-                },
-            },
-        },
+        chat = {adapter = "gemini",},
         inline = {adapter = "gemini",},
         agent = {adapter = "gemini",},
     },
@@ -226,6 +213,16 @@ require('codecompanion').setup({
         chat = {
             auto_scroll = true,
             show_header_separator = true,
+        },
+    },
+    extensions = {
+        mcphub = {
+            callback = "mcphub.extensions.codecompanion",
+            opts = {
+                show_result_in_chat = false,
+                make_vars = true,
+                make_slash_commands = true,
+            },
         },
     },
 })
@@ -314,13 +311,8 @@ vim.keymap.set("n", "<Leader>m", ":MCPHub<CR>", {noremap = true, silent = true, 
 lua_source = '''
 require("mcphub").setup({
     extensions = {
-        codecompanion = {
-            show_result_in_chat = false,
-            make_vars = true,
-            make_slash_commands = true,
-        },
         avante = {
-            auto_approve_mcp_tool_calls = false,
+            make_slash_commands = true,
         },
     }
 })
