--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -97,6 +97,7 @@ repo = 'vim-denops/denops.vim'
 on_event = ['VimEnter']
 hook_source = '''
     let g:denops_server_addr = '127.0.0.1:32123'
+    let g:denops#debug = 0
 '''
 
 [[plugins]]
