feat: use lua style config scripts for Neovim

--- a/.vim/toml/dein.toml
+++ b/.vim/toml/dein.toml
@@ -1,5 +1,5 @@
 [[plugins]]
 repo = 'rbtnn/vim-ambiwidth'
-hook_add = '''
-    let g:ambiwidth_cica_enabled = v:false
+lua_add = '''
+    vim.g.ambiwidth_cica_enabled = false
 '''
