--- a/.vim/toml/colorscheme_lazy.toml
+++ b/.vim/toml/colorscheme_lazy.toml
@@ -33,20 +33,24 @@ on_event = 'CursorMoved'
 [[plugins]]
 repo = 'christianchiarulli/nvcode-color-schemes.vim'
 on_event = 'CursorMoved'
-hook_source = '''
-    let g:nvcode_termcolors = 256
+lua_source = '''
+    vim.g.nvcode_termcolors = 256
 '''
 
 [[plugins]]
 repo = 'sainnhe/sonokai'
-on_source = ['lightline.vim']
-hook_add = '''
-    augroup modColorschemeGroup
-        autocmd!
-        autocmd ColorScheme * highlight Folded cterm=bold ctermfg=10 gui=bold guifg=LightGreen
-        autocmd ColorScheme * highlight CursorLine ctermbg=8 guibg=#5d6173
-        autocmd ColorScheme * highlight Comment cterm=NONE gui=NONE
-    augroup END
+on_source = ['lualine.nvim']
+lua_add = '''
+    local colorSchemeAuGroup = vim.api.nvim_create_augroup('colorSchemeAuGroup', {})
+    vim.api.nvim_create_autocmd({'ColorScheme'}, {
+        pattern = '*',
+        callback = function()
+            vim.api.nvim_set_hl(0, "Folded", {bold = true, ctermfg = 10, guifg = "LightGreen"})
+            vim.api.nvim_set_hl(0, "CursorLine", {ctermbg = 8, guibg = "#5d6173"})
+            vim.api.nvim_set_hl(0, "Comment", {cterm = "NONE", gui = "NONE"})
+        end,
+        group = colorSchemeAuGroup,
+    })
 '''
 lua_source = '''
 vim.cmd.colorscheme('sonokai')
