--- a/.vim/toml/markdown_lazy.toml
+++ b/.vim/toml/markdown_lazy.toml
@@ -1,9 +1,9 @@
 [[plugins]]
 repo = 'sano-jin/markdown-preview.nvim'
-hook_source = '''
-    nmap <C-p> <Plug>MarkdownPreview
-    let g:mkdp_auto_start = 0
-    let g:mkdp_auto_close = 0
+lua_source = '''
+    vim.keymap.set('n', '<C-p>', '<Plug>MarkdownPreview', {remap = true})
+    vim.g.mkdp_auto_start = 0
+    vim.g.mkdp_auto_close = 0
 '''
 on_ft = ['markdown', 'pandoc.markdown', 'rmd']
 build = 'sh -c "cd app && yarn install"'
