--- a/.vim/toml/python_lazy.toml
+++ b/.vim/toml/python_lazy.toml
@@ -1,26 +1,25 @@
 [[plugins]]
 repo = 'jmcantrell/vim-virtualenv'
 on_ft = 'python'
-hook_source = '''
-    let g:virtualenv_directory = '.'
+lua_source = '''
+    vim.g.virtualenv_directory = '.'
 '''
 
 [[plugins]]
 repo = 'jupyter-vim/jupyter-vim'
 on_ft = 'python'
-hook_source = '''
-    nnoremap <buffer> <silent> <leader>jc :JupyterConnect<CR>
-    nnoremap <buffer> <silent> <leader>jd :JupyterDiconnect<CR>
-    nnoremap <buffer> <silent> <leader>js :JupyterSendCell<CR>
-    nnoremap <buffer> <silent> <leader>jr :JupyterSendRange<CR>
-    vnoremap <buffer> <silent> <leader>jr :JupyterSendRange<CR>
+lua_source = '''
+    vim.keymap.set('n', '<Leader>jc', vim.cmd.JupyterConnect, {remap = false, buffer = true, silent = true})
+    vim.keymap.set('n', '<Leader>jd', vim.cmd.JupyterDisconnect, {remap = false, buffer = true, silent = true})
+    vim.keymap.set('n', '<Leader>js', vim.cmd.JupyterSendCell, {remap = false, buffer = true, silent = true})
+    vim.keymap.set({'n', 'v'}, '<Leader>jr', vim.cmd.JupyterSendRange, {remap = false, buffer = true, silent = true})
 '''
 
 [[plugins]]
 repo = 'goerz/jupytext.vim'
 on_path = ['\.ipynb', '\.py']
-hook_source = '''
-    let g:jupytext_fmt = 'py:percent'
-    let g:jupytext_filetype_map = #{py: 'python'}
+lua_source = '''
+    vim.g.jupytext_fmt = 'py:percent'
+    vim.g.jupytext_filetype_map = {py = 'python'}
 '''
 
