feat: change lazy loading setting for ddu-commands to avoid unnecessary load

--- a/.vim/toml/ddu_lazy.toml
+++ b/.vim/toml/ddu_lazy.toml
@@ -8,7 +8,8 @@ hook_source = '''
 
 [[plugins]]
 repo = 'Shougo/ddu-commands.vim'
-on_source = ['ddu.vim']
+depends = ['ddu.vim']
+on_cmd = ['Ddu']
 
 [[plugins]]
 repo = 'Shougo/ddu-ui-ff'
