feat: change lazy loading setting of ddu.vim to load at the time of denops.vim loading

--- a/.vim/toml/ddu_lazy.toml
+++ b/.vim/toml/ddu_lazy.toml
@@ -1,9 +1,9 @@
 [[plugins]]
 repo = 'Shougo/ddu.vim'
 depends = ['denops.vim']
-on_event = ['BufEnter']
-hook_source = '''
-    source ~/dotfiles/.vim/settings/ddu_rc.vim
+on_source = ['denops.vim']
+lua_source = '''
+    vim.cmd.source('~/dotfiles/.vim/settings/ddu_rc.vim')
 '''
 
 [[plugins]]
