--- a/.vim/toml/ddu_lazy.toml
+++ b/.vim/toml/ddu_lazy.toml
@@ -154,6 +154,7 @@ on_source = ['ddu.vim']
 [[plugins]]
 repo = 'Bakudankun/ddu-source-dirmark'
 on_source = ['ddu.vim']
+denops_wait = 0
 
 [[plugins]]
 repo = 'k-ota106/ddu-source-marks'
@@ -170,6 +171,7 @@ on_source = ['ddu.vim']
 [[plugins]]
 repo = 'tennashi/ddu-source-git'
 on_source = ['ddu.vim']
+denops_wait = 0
 
 [[plugins]]
 repo = 'uga-rosa/ddu-source-lsp'
@@ -182,6 +184,7 @@ on_source = ['ddu.vim']
 [[plugins]]
 repo = 'lambdalisue/vim-mr'
 on_source = ['ddu-source-mr']
+denops_wait = 0
 
 [[plugins]]
 repo = 'Shougo/ddu-filter-matcher_substring'
