--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -552,7 +552,8 @@ lua_ddt-shell = '''
 [[plugins]]
 repo = 'gamoutatsumi/dps-ghosttext.vim'
 depends = ['denops.vim']
-on_source = ['denops.vim']
+on_cmd = ['GhostStart']
+on_func = ['ghosttext#']
 lua_post_source = '''
     tmp_table = {}
     tmp_table["gemini.google.com"] = "markdown"
