fix: source mason.nvim before sourcing ddc-source-lsp because ddc-source-lsp uses mason and some plugins loaded with mason

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -71,6 +71,7 @@ lua_source = '''
 repo = 'mason-org/mason.nvim'
 on_event = ['CursorHold', 'InsertEnter', 'BufReadPost', 'BufNewFile']
 on_cmd = ['Mason', 'MasonInstall', 'MasonUninstall', 'MasonUninstallAll', 'MasonLog']
+on_source = ['ddc-source-lsp']
 
 [[plugins]]
 repo = 'mason-org/mason-lspconfig.nvim'
