--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -140,7 +140,7 @@ on_source = ['lualine.nvim']
 repo = 'junegunn/vim-easy-align'
 on_map = 'ga'
 lua_source = '''
-    vim.keymap.set({'n', 'x'}, 'ga', '<Plug>(EasyAlign)', {remap = true})
+    vim.keymap.set({'n', 'x'}, 'ga', '<Plug>(EasyAlign)', {remap = true, desc = 'EasyAlign'})
 '''
 
 [[plugins]]
@@ -151,15 +151,13 @@ on_source = ['ddc.vim']
 repo = 'hrsh7th/vim-vsnip'
 on_source = ['ddc.vim']
 lua_source = '''
-    local opts = { expr = true, remap = true }
-
     vim.keymap.set({'i', 's'}, '<C-k>', function()
         if vim.fn['vsnip#expandable']() == 1 then
             return '<Plug>(vsnip-expand)'
         else
             return '<C-k>'
         end
-    end, opts)
+    end, {expr = true, remap = true, desc = 'vsnip-expand'})
 
     vim.keymap.set({'i', 's'}, '<C-f>', function()
         if vim.fn['vsnip#jumpable'](1) == 1 then
@@ -167,7 +165,7 @@ lua_source = '''
         else
             return '<C-f>'
         end
-    end, opts)
+    end, {expr = true, remap = true, desc = 'vsnip-jump-next'})
 
     vim.keymap.set({'i', 's'}, '<C-b>', function()
         if vim.fn['vsnip#jumpable'](-1) == 1 then
@@ -175,7 +173,7 @@ lua_source = '''
         else
             return '<C-b>'
         end
-    end, opts)
+    end, {expr = true, remap = true, desc = 'vsnip-jump-prev'})
 '''
 
 [[plugins]]
@@ -214,8 +212,8 @@ on_source = ['vim-precious']
 repo = 'haya14busa/vim-edgemotion'
 on_map = ['<C-j>', '<C-k>']
 lua_source = '''
-    vim.keymap.set({'n', 'v'}, '<C-j>', '<Plug>(edgemotion-j)', {remap = true})
-    vim.keymap.set({'n', 'v'}, '<C-k>', '<Plug>(edgemotion-k)', {remap = true})
+    vim.keymap.set({'n', 'v'}, '<C-j>', '<Plug>(edgemotion-j)', {remap = true, desc = 'edgemotion-j'})
+    vim.keymap.set({'n', 'v'}, '<C-k>', '<Plug>(edgemotion-k)', {remap = true, desc = 'edgemotion-k'})
 '''
 
 [[plugins]]
@@ -238,23 +236,23 @@ lua_source = '''
 
 [plugins.ftplugin]
 lua_gin-branch = '''
-    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true})
+    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true, desc = 'edit'})
+    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true, desc = 'quit'})
 '''
 lua_gin-diff = '''
-    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true})
+    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true, desc = 'edit'})
+    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true, desc = 'quit'})
 '''
 lua_gin-log = '''
-    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'gsh', '<Plug>(gin-action-show)', {remap = false, buffer = true})
-    vim.keymap.set('n', 'gsw', '<Plug>(gin-action-switch)', {remap = false, buffer = true})
+    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true, desc = 'edit'})
+    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true, desc = 'quit'})
+    vim.keymap.set('n', 'gsh', '<Plug>(gin-action-show)', {remap = false, buffer = true, desc = 'gin-action-show'})
+    vim.keymap.set('n', 'gsw', '<Plug>(gin-action-switch)', {remap = false, buffer = true, desc = 'gin-action-switch'})
 '''
 lua_gin-status = '''
-    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true})
-    vim.keymap.set('n', 'e', '<Plug>(gin-action-edit)', {remap = false, buffer = true})
+    vim.keymap.set('n', 'r', vim.cmd.edit({bang = true}), {remap = false, buffer = true, silent = true, desc = 'edit'})
+    vim.keymap.set('n', 'q', vim.cmd.quit(), {remap = false, buffer = true, silent = true, desc = 'quit'})
+    vim.keymap.set('n', 'e', '<Plug>(gin-action-edit)', {remap = false, buffer = true, desc = 'gin-action-edit'})
 '''
 
 [[plugins]]
@@ -403,7 +401,7 @@ repo = 'thinca/vim-quickrun'
 on_cmd = 'QuickRun'
 on_func = 'quickrun#'
 lua_add = '''
-    vim.keymap.set('n', ',q', vim.cmd.QuickRun, {remap = false, silent = true})
+    vim.keymap.set('n', ',q', vim.cmd.QuickRun, {remap = false, silent = true, desc = 'QuickRun'})
 '''
 
 [[plugins]]
