--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -500,6 +500,7 @@ wk.add({
     {"<Leader>t", group = "translate (google)", mode = {"n", "v"}},
     {"<C-l>", group = "LSP", mode = {"n", "v"}},
 })
+vim.keymap.set("n", "<Leader>?", function() require('which-key').show({global = false}) end, {desc = "Buffer Local Keymaps (which-key)"})
 '''
 
 [[plugins]]
